grammar.js
    program: $ => repeat(
      // TODO: other kinds of definitions
      choice(
        $.transaction,
        $.statement,
        $.compound_statement,
      ),
    ),

    keyword_select: _ => make_keyword("select"),
    keyword_insert: _ => make_keyword("insert"),
    keyword_replace: _ => make_keyword("replace"),
    keyword_update: _ => make_keyword("update"),
    keyword_into: _ => make_keyword("into"),
    keyword_values: _ => make_keyword("values"),
    keyword_set: _ => make_keyword("set"),
    keyword_from: _ => make_keyword("from"),
    keyword_on: _ => make_keyword("on"),
    keyword_as: _ => make_keyword("as"),
    keyword_ignore: _ => make_keyword("ignore"),
    keyword_returning: _ => make_keyword("returning"),
    keyword_conflict: _ => make_keyword("conflict"),
    keyword_do: _ => make_keyword("do"),
    keyword_nothing: _ => make_keyword("nothing"),
    keyword_high_priority: _ => make_keyword("high_priority"),
    keyword_low_priority: _ => make_keyword("low_priority"),
    keyword_delayed: _ => make_keyword("delayed"),
    statement: $ => seq(
      choice(
        $._ddl_statement,
        $._dml_statement,
      ),
      optional(';'),
    ),

    _ddl_statement: $ => choice(
      $._create_statement,
      $._alter_statement,
      $._drop_statement,
    ),

    _dml_statement: $ => seq(
      optional(
          $._cte
      ),
      choice(
        $._select_statement,
        $._delete_statement,
        $._insert_statement,
        $._update_statement,
      ),
      optional($.window_clause),
    ),

    select: $ => seq(
      $.keyword_select,
      seq(
        optional($.keyword_distinct),
        $.select_expression,
      ),
    ),

    select_expression: $ => seq(
      $._select_expression,
      repeat(
        seq(
          ',',
          $._select_expression,
        ),
      ),
    ),

    _select_expression: $ => choice(
      $.all_fields,
      $.term,
    ),

    term: $ => seq(
      field("value", $._expression),
      optional($._alias),
    ),

    table_reference: $ => seq(
      optional(
        seq(
          field('schema', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
    ),

    insert: $ => seq(
      choice(
        $.keyword_insert,
        $.keyword_replace
      ),
      optional(
        choice(
          $.keyword_low_priority,
          $.keyword_delayed,
          $.keyword_high_priority,
        ),
      ),
      optional($.keyword_ignore),
      optional($.keyword_into),
      $.table_reference,
      optional(
        seq(
          $.keyword_as,
          field('table_alias', $._alias_identifier)
        ),
      ),
      choice(
        $._insert_values,
        $._set_values,
      ),
      optional(
        seq(
          $.keyword_on,
          $.keyword_conflict,
          seq(
            $.keyword_do,
            choice(
              $.keyword_nothing,
              seq(
                $.keyword_update,
                $._set_values,
                optional($.where),
              ),
            ),
          ),
        ),
      ),
    ),

    _insert_values: $ => seq(
      optional(alias($._column_list, $.list)),
      choice(
        seq(
          $.keyword_values,
          comma_list($.list, true),
        ),
        $._select_statement,
      ),
    ),

    _set_values: $ => seq(
      $.keyword_set,
      comma_list($.assignment, true),
    ),

    _column_list: $ => paren_list(alias($._column, $.column), true),
    assignment: $ => seq(
      field('left', $.field),
      '=',
      field('right', $._expression),
    ),


    all_fields: $ => seq(
      optional(
        seq(
          optional(
            seq(
              field('schema', $._alias_identifier),
              '.',
            ),
          ),
          field('table_alias', $._alias_identifier),
          '.',
        ),
      ),
      '*',
    ),

    field: $ => prec.left(
      seq(
        optional(
          seq(
            optional(
              seq(
                field('schema', $._alias_identifier),
                '.',
              ),
            ),
            field('table_alias', $._alias_identifier),
            '.',
          ),
        ),
        choice(
            field('name', $.identifier),
            field('name', alias($._double_quote_string, $.identifier)),
        ),
      ),
    ),

    _alias_identifier : $ => choice(
      $.identifier,
      alias($._double_quote_string, $.identifier),
    ),

    _alias: $ => choice(
      field('alias', $._alias_identifier),
      seq(
        $.keyword_as,
        field('alias', $._alias_identifier),
      ),
    ),

    from: $ => seq(
      $.keyword_from,
      optional(
        $.keyword_only,
      ),
      comma_list($.relation, true),
      optional($.index_hint),
      repeat(
        choice(
          $.join,
          $.lateral_join,
        ),
      ),
      optional($.where),
      optional($.group_by),
      optional($.order_by),
      optional($.limit),
    ),

    relation: $ => seq(
      choice(
        $.subquery,
        $.invocation,
        $.table_reference,
        seq(
          '(',
          $.values,
          ')',
        ),
      ),
      optional(
        seq(
          optional($.keyword_as),
          field('table_alias', $._alias_identifier),
          optional(alias($._column_list, $.list)),
        ),
      ),
    ),

    returning: $ => seq(
      $.keyword_returning,
      $.select_expression,
    ),

    _expression: $ => prec(1,
      choice(
        $.literal,
        $.field,
        $.parameter,
        $.list,
        $.case,
        $.window_function,
        $.subquery,
        $.cast,
        alias($.implicit_cast, $.cast),
        $._aggregate_function,
        $.exists,
        $.invocation,
        $.binary_expression,
        $.unary_expression,
        $.array,
        $.interval,
        $.between_expression,
        seq("(", $._expression, ")"),
        $.rapper_ident,
      )
    ),

    list: $ => paren_list($._expression),

    literal: $ => prec(2,
      choice(
        $._integer,
        $._decimal_number,
        $._literal_string,
        $.keyword_true,
        $.keyword_false,
        $.keyword_null,
      ),
    ),
    _double_quote_string: _ => seq('"', /[^"]*/, '"'),
    _literal_string: $ => prec(1,
        choice(
            seq("'", /([^']|'')*/, "'"),
            $._double_quote_string,
        ),
    ),
    _integer: $ => seq(optional("-"), $._natural_number),
    _decimal_number: $ => choice(
        seq(optional("-"), ".", $._natural_number),
        seq($._integer, ".", $._natural_number),
        seq($._integer, "."),
    ),

    identifier: $ => choice(
      $._identifier,
      seq('`', $._identifier, '`'),
      $.rapper_ident
    ),
    _identifier: _ => /([a-zA-Z_][0-9a-zA-Z_]*)/,
